microconfig-core/src/test/resources/repo/components/exceptions/bad/badDelimeter/exception.yl
Bad property: 'key=value' in ../components/exceptions/bad/badDelimeter/application.yl.yaml:1
Yaml property must contain ':' as delimiter.